// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render RuleFilter with FilterComparator when received a container AND 1`] = `
<div>
  <div
    aria-label="filters container"
  >
    <div
      aria-label="container expressions"
      class="makeStyles-ruleCardFilterContainer-361"
    >
      <div
        aria-label="container expressions header"
        class="makeStyles-ruleCardFilterContainerHeader-362"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-363 MuiTypography-body1"
        >
          All Of
        </p>
      </div>
      <div
        aria-label="filter expression comparator"
        class="makeStyles-ruleCardFilterExpression-368"
      >
        <p
          aria-label="filter expression field"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-365 MuiTypography-body1"
        >
          field1
        </p>
        <p
          aria-label="filter expression operator"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-366 MuiTypography-body1"
        >
          =
        </p>
        <p
          aria-label="filter expression value"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-367 MuiTypography-body1"
        >
          10
        </p>
      </div>
      <div
        aria-label="filter expression comparator"
        class="makeStyles-ruleCardFilterExpression-368"
      >
        <p
          aria-label="filter expression field"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-365 MuiTypography-body1"
        >
          field2
        </p>
        <p
          aria-label="filter expression operator"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-366 MuiTypography-body1"
        >
          &gt;
        </p>
        <p
          aria-label="filter expression value"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-367 MuiTypography-body1"
        >
          50
        </p>
      </div>
      <div
        aria-label="filter expression comparator"
        class="makeStyles-ruleCardFilterExpression-368"
      >
        <p
          aria-label="filter expression field"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-365 MuiTypography-body1"
        >
          field2
        </p>
        <p
          aria-label="filter expression operator"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-366 MuiTypography-body1"
        >
          &lt;=
        </p>
        <p
          aria-label="filter expression value"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-367 MuiTypography-body1"
        >
          50
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render RuleFilter with FilterComparator when received a container OR 1`] = `
<div>
  <div
    aria-label="filters container"
  >
    <div
      aria-label="container expressions"
      class="makeStyles-ruleCardFilterContainer-400"
    >
      <div
        aria-label="container expressions header"
        class="makeStyles-ruleCardFilterContainerHeader-401"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-402 MuiTypography-body1"
        >
          One Of
        </p>
      </div>
      <div
        aria-label="filter expression comparator"
        class="makeStyles-ruleCardFilterExpression-407"
      >
        <p
          aria-label="filter expression field"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-404 MuiTypography-body1"
        >
          field1
        </p>
        <p
          aria-label="filter expression operator"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-405 MuiTypography-body1"
        >
          =
        </p>
        <p
          aria-label="filter expression value"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-406 MuiTypography-body1"
        >
          10
        </p>
      </div>
      <div
        aria-label="filter expression comparator"
        class="makeStyles-ruleCardFilterExpression-407"
      >
        <p
          aria-label="filter expression field"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-404 MuiTypography-body1"
        >
          field2
        </p>
        <p
          aria-label="filter expression operator"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-405 MuiTypography-body1"
        >
          &gt;
        </p>
        <p
          aria-label="filter expression value"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-406 MuiTypography-body1"
        >
          50
        </p>
      </div>
      <div
        aria-label="filter expression comparator"
        class="makeStyles-ruleCardFilterExpression-407"
      >
        <p
          aria-label="filter expression field"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-404 MuiTypography-body1"
        >
          field2
        </p>
        <p
          aria-label="filter expression operator"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-405 MuiTypography-body1"
        >
          &lt;=
        </p>
        <p
          aria-label="filter expression value"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-406 MuiTypography-body1"
        >
          50
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render RuleFilter with FilterComparator when received a container UNKNOWN 1`] = `
<div>
  <div
    aria-label="filters container"
  >
    <div
      aria-label="container expressions"
      class="makeStyles-ruleCardFilterContainer-439"
    >
      <div
        aria-label="container expressions header"
        class="makeStyles-ruleCardFilterContainerHeader-440"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-441 MuiTypography-body1"
        >
          anyfield
        </p>
      </div>
      <div
        aria-label="filter expression comparator"
        class="makeStyles-ruleCardFilterExpression-446"
      >
        <p
          aria-label="filter expression field"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-443 MuiTypography-body1"
        >
          field1
        </p>
        <p
          aria-label="filter expression operator"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-444 MuiTypography-body1"
        >
          =
        </p>
        <p
          aria-label="filter expression value"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-445 MuiTypography-body1"
        >
          10
        </p>
      </div>
      <div
        aria-label="filter expression comparator"
        class="makeStyles-ruleCardFilterExpression-446"
      >
        <p
          aria-label="filter expression field"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-443 MuiTypography-body1"
        >
          field2
        </p>
        <p
          aria-label="filter expression operator"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-444 MuiTypography-body1"
        >
          &gt;
        </p>
        <p
          aria-label="filter expression value"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-445 MuiTypography-body1"
        >
          50
        </p>
      </div>
      <div
        aria-label="filter expression comparator"
        class="makeStyles-ruleCardFilterExpression-446"
      >
        <p
          aria-label="filter expression field"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-443 MuiTypography-body1"
        >
          field2
        </p>
        <p
          aria-label="filter expression operator"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-444 MuiTypography-body1"
        >
          &lt;=
        </p>
        <p
          aria-label="filter expression value"
          class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-445 MuiTypography-body1"
        >
          50
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render RuleFilter with FilterComparator when received an filter expression Comparator 1`] = `
<div>
  <div
    aria-label="filters container"
  >
    <div
      aria-label="filter expression comparator"
      class="makeStyles-ruleCardFilterExpression-203"
    >
      <p
        aria-label="filter expression field"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-200 MuiTypography-body1"
      >
        field1
      </p>
      <p
        aria-label="filter expression operator"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-201 MuiTypography-body1"
      >
        =
      </p>
      <p
        aria-label="filter expression value"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-202 MuiTypography-body1"
      >
        10
      </p>
    </div>
    <div
      aria-label="filter expression comparator"
      class="makeStyles-ruleCardFilterExpression-203"
    >
      <p
        aria-label="filter expression field"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-200 MuiTypography-body1"
      >
        field2
      </p>
      <p
        aria-label="filter expression operator"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-201 MuiTypography-body1"
      >
        &gt;
      </p>
      <p
        aria-label="filter expression value"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-202 MuiTypography-body1"
      >
        20
      </p>
    </div>
    <div
      aria-label="filter expression comparator"
      class="makeStyles-ruleCardFilterExpression-203"
    >
      <p
        aria-label="filter expression field"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-200 MuiTypography-body1"
      >
        field3
      </p>
      <p
        aria-label="filter expression operator"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-201 MuiTypography-body1"
      >
        &gt;=
      </p>
      <p
        aria-label="filter expression value"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-202 MuiTypography-body1"
      >
        30
      </p>
    </div>
    <div
      aria-label="filter expression comparator"
      class="makeStyles-ruleCardFilterExpression-203"
    >
      <p
        aria-label="filter expression field"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-200 MuiTypography-body1"
      >
        field4
      </p>
      <p
        aria-label="filter expression operator"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-201 MuiTypography-body1"
      >
        &lt;
      </p>
      <p
        aria-label="filter expression value"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-202 MuiTypography-body1"
      >
        40
      </p>
    </div>
    <div
      aria-label="filter expression comparator"
      class="makeStyles-ruleCardFilterExpression-203"
    >
      <p
        aria-label="filter expression field"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-200 MuiTypography-body1"
      >
        field5
      </p>
      <p
        aria-label="filter expression operator"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-201 MuiTypography-body1"
      >
        &lt;=
      </p>
      <p
        aria-label="filter expression value"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-202 MuiTypography-body1"
      >
        50
      </p>
    </div>
  </div>
</div>
`;

exports[`Render RuleFilter with FilterComparator when received an filter expression default 1`] = `
<div>
  <div
    aria-label="filters container"
  >
    <div
      aria-label="filter expression comparator"
      class="makeStyles-ruleCardFilterExpression-164"
    >
      <p
        aria-label="filter expression field"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-161 MuiTypography-body1"
      >
        temperature
      </p>
      <p
        aria-label="filter expression operator"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-162 MuiTypography-body1"
      >
        =
      </p>
      <p
        aria-label="filter expression value"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-163 MuiTypography-body1"
      >
        10
      </p>
    </div>
    <div
      aria-label="filter expression comparator"
      class="makeStyles-ruleCardFilterExpression-164"
    >
      <p
        aria-label="filter expression field"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-161 MuiTypography-body1"
      >
        humidity
      </p>
      <p
        aria-label="filter expression operator"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-162 MuiTypography-body1"
      >
        =
      </p>
      <p
        aria-label="filter expression value"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-163 MuiTypography-body1"
      >
        80
      </p>
    </div>
  </div>
</div>
`;

exports[`Render RuleFilter with FilterComparator when received an filter expression location comparator with max distance 1`] = `
<div>
  <div
    aria-label="filters container"
  >
    <div
      aria-label="filter expression location"
      class="makeStyles-ruleCardFilterExpression-242"
    >
      <p
        aria-label="filter expression field"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-239 MuiTypography-body1"
      >
        location
      </p>
      <p
        aria-label="filter expression location distance"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionDistance-243 MuiTypography-body1"
      >
        is to less than 6.5 kms. from [37.12, -1.12]
      </p>
    </div>
  </div>
</div>
`;

exports[`Render RuleFilter with FilterComparator when received an filter expression location comparator with min and max distance 1`] = `
<div>
  <div
    aria-label="filters container"
  >
    <div
      aria-label="filter expression location"
      class="makeStyles-ruleCardFilterExpression-320"
    >
      <p
        aria-label="filter expression field"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-317 MuiTypography-body1"
      >
        location
      </p>
      <p
        aria-label="filter expression location distance"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionDistance-321 MuiTypography-body1"
      >
        is between 500 mts. and 1.5 kms. from [37.12, -1.12]
      </p>
    </div>
  </div>
</div>
`;

exports[`Render RuleFilter with FilterComparator when received an filter expression location comparator with min distance 1`] = `
<div>
  <div
    aria-label="filters container"
  >
    <div
      aria-label="filter expression location"
      class="makeStyles-ruleCardFilterExpression-281"
    >
      <p
        aria-label="filter expression field"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-278 MuiTypography-body1"
      >
        location
      </p>
      <p
        aria-label="filter expression location distance"
        class="MuiTypography-root makeStyles-ruleCardFilterExpressionDistance-282 MuiTypography-body1"
      >
        is to more than 6.5 kms. from [37.12, -1.12]
      </p>
    </div>
  </div>
</div>
`;

exports[`Render RuleFilter with Passthrow when no filter received 1`] = `
<div>
  <div
    aria-label="filters container"
  >
    <div
      aria-label="filter expression passthrow"
      class="makeStyles-ruleCardFilterExpressionPassthrow-4"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6"
      >
        PASSTHROW
      </h6>
    </div>
  </div>
</div>
`;
